--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,12 @@
-name: Build and Deploy
+name: Build Deploy
 
 on:
   push:
     branches:
-      - 'main'
+      - '*' # deploy on all branches (but a --dry-run flag is added for branches (see code below))
+
+env:
+  TARGET_DIR: dist/analog/public
 
 jobs:
   build:
@@ -13,17 +16,24 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-      - uses: k9n-dev/analog-publish-gh-pages@v1.0.0
-        with:
-          # Required: token to access / deploy on GitHub Pages
-          access-token: ${{ secrets.ACCESS_TOKEN }}
-          # Optional: arguments passed to `npm ci`
-          install-args: '--legacy-peer-deps'
-          # Optional: arguments passed to `npm run build`
-          build-args: ''
-          # Optional: the directory after build process to deploy (defaults to `dist/analog/public`)
-          deploy-dir: 'dist/analog/public'
-          # Optional: a specific branch where the static site should be deployed (defaults to `gh-pages`)
-          deploy-branch: 'main' # important: --dry-run (see option below) won't actually deploy the site!
-          # Optional: prevent an actual deployment (e. g. for running in branch pipelines)
-          dry-run: false
+      - name: Set environment variable based on branch
+        run: |
+          if [[ $GITHUB_REF == refs/heads/main || $GITHUB_REF == refs/heads/master ]]; then
+            echo "Branch is main or master. Setting DRY_RUN_OPTION to empty."
+            echo "DRY_RUN_OPTION=" >> $GITHUB_ENV
+          else
+            echo "Branch is not main or master. Setting DRY_RUN_OPTION to '--dry-run'."
+            echo "DRY_RUN_OPTION=--dry-run" >> $GITHUB_ENV
+          fi
+      - name: Remove package.lock
+        run: rm package-lock.json
+      - name: Install
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Deploy Website (gh-pages branch)
+        env:
+          GH_TOKEN: ${{ secrets.ACCESS_TOKEN }} # A token must be created to be able to deploy on the gh-pages branch
+        run: |
+          echo "DRY_RUN_OPTION=$DRY_RUN_OPTION"
+          npx angular-cli-ghpages --no-silent  --repo=https://github.com/remes2000/remes2000.github.io.git --name="Michał Nieruchalski" --email=nieruchalskimichal@gmail.com --branch=main --dir="${{env.TARGET_DIR}}" $DRY_RUN_OPTION
