--- a/angular.json
+++ b/angular.json
@@ -24,7 +24,13 @@
             },
             "production": {
               "sourcemap": false,
-              "mode": "production"
+              "mode": "production",
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.production.ts"
+                }
+              ]
             }
           }
         },
