--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "marked-gfm-heading-id": "^3.1.0",
     "marked-highlight": "^2.0.1",
     "mermaid": "^10.2.4",
+    "ngx-matomo-client": "6.0.2",
     "prismjs": "^1.29.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
@@ -42,8 +43,8 @@
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
     "@nx/vite": "~17.2.0",
-    "nx": "~17.2.0",
     "jsdom": "^22.1.0",
+    "nx": "~17.2.0",
     "typescript": "~5.3.0",
     "vite": "~5.0.0",
     "vitest": "^1.0.0"
