--- a/angular.json
+++ b/angular.json
@@ -24,13 +24,7 @@
             },
             "production": {
               "sourcemap": false,
-              "mode": "production",
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.production.ts"
-                }
-              ]
+              "mode": "production"
             }
           }
         },
