--- a/package.json
+++ b/package.json
@@ -11,40 +11,44 @@
     "start": "npm run dev",
     "build": "ng build",
     "watch": "ng build --watch",
-    "test": "ng test"
+    "test": "ng test",
+    "postinstall": "patch-package"
   },
   "dependencies": {
-    "@analogjs/content": "0.2.40",
-    "@analogjs/router": "0.2.40",
-    "@angular/animations": "^17.1.0",
-    "@angular/common": "^17.1.0",
-    "@angular/compiler": "^17.1.0",
-    "@angular/core": "^17.1.0",
-    "@angular/forms": "^17.1.0",
-    "@angular/platform-browser": "^17.1.0",
-    "@angular/platform-browser-dynamic": "^17.1.0",
-    "@angular/platform-server": "^17.1.0",
-    "@angular/router": "^17.1.0",
-    "@nx/angular": "~17.2.0",
+    "@analogjs/content": "1.16.0",
+    "@analogjs/router": "1.16.0",
+    "@angular/animations": "^18.2.13",
+    "@angular/common": "^18.2.13",
+    "@angular/compiler": "^18.2.13",
+    "@angular/core": "^18.2.13",
+    "@angular/forms": "^18.2.13",
+    "@angular/platform-browser": "^18.2.13",
+    "@angular/platform-browser-dynamic": "^18.2.13",
+    "@angular/platform-server": "^18.2.13",
+    "@angular/router": "^18.2.13",
+    "@nx/angular": "~19.8.0",
+    "@nx/devkit": "~19.8.0",
     "front-matter": "^4.0.2",
-    "marked": "^5.0.2",
-    "marked-gfm-heading-id": "^3.1.0",
-    "marked-highlight": "^2.0.1",
+    "marked": "^15.0.11",
+    "marked-gfm-heading-id": "^4.1.1",
+    "marked-highlight": "^2.2.1",
+    "marked-mangle": "^1.1.10",
     "mermaid": "^10.2.4",
     "prismjs": "^1.29.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
-    "zone.js": "~0.14.0"
+    "zone.js": "~0.14.10"
   },
   "devDependencies": {
-    "@analogjs/platform": "0.2.40",
-    "@angular-devkit/build-angular": "^17.1.0",
-    "@angular/cli": "^17.1.0",
-    "@angular/compiler-cli": "^17.1.0",
-    "@nx/vite": "~17.2.0",
+    "@analogjs/platform": "1.16.0",
+    "@angular-devkit/build-angular": "^18.2.13",
+    "@angular/cli": "^18.2.19",
+    "@angular/compiler-cli": "^18.2.13",
+    "@nx/vite": "~19.8.0",
     "jsdom": "^22.1.0",
-    "nx": "~17.2.0",
-    "typescript": "~5.3.0",
+    "nx": "~19.8.0",
+    "patch-package": "^8.0.0",
+    "typescript": "~5.5.4",
     "vite": "~5.0.0",
     "vitest": "^1.0.0"
   }
