--- a/package.json
+++ b/package.json
@@ -11,21 +11,20 @@
     "start": "npm run dev",
     "build": "ng build",
     "watch": "ng build --watch",
-    "test": "ng test",
-    "postinstall": "patch-package"
+    "test": "ng test"
   },
   "dependencies": {
     "@analogjs/content": "1.16.1",
     "@analogjs/router": "1.16.1",
-    "@angular/animations": "^18.2.13",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/platform-server": "^18.2.13",
-    "@angular/router": "^18.2.13",
+    "@angular/animations": "^19.2.10",
+    "@angular/common": "^19.2.10",
+    "@angular/compiler": "^19.2.10",
+    "@angular/core": "^19.2.10",
+    "@angular/forms": "^19.2.10",
+    "@angular/platform-browser": "^19.2.10",
+    "@angular/platform-browser-dynamic": "^19.2.10",
+    "@angular/platform-server": "^19.2.10",
+    "@angular/router": "^19.2.10",
     "@nx/angular": "~21.0.3",
     "@nx/devkit": "~19.8.0",
     "front-matter": "^4.0.2",
@@ -37,17 +36,16 @@
     "prismjs": "^1.29.0",
     "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
-    "zone.js": "~0.14.10"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@analogjs/platform": "1.16.1",
-    "@angular-devkit/build-angular": "^18.2.13",
+    "@angular-devkit/build-angular": "^19.2.10",
     "@angular/cli": "^18.2.19",
-    "@angular/compiler-cli": "^18.2.13",
+    "@angular/compiler-cli": "^19.2.10",
     "@nx/vite": "~21.0.3",
     "jsdom": "^22.1.0",
     "nx": "~19.8.0",
-    "patch-package": "^8.0.0",
     "typescript": "~5.5.4",
     "vite": "~6.0.0",
     "vitest": "^1.0.0"
